# traffic-review

./: .gitignore  AGENTS.md  README.md  app.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: pages.yml
docs/: app.js  index.html  styles.css
docs/assets/samples/: cars-night.webm  traffic-demo.webm
docs/lib/: coco.js  homography.js  perspective.js  settings.js  tracker.js  transcode.js  yolo.js
src/traffic_review/: __init__.py  analyzer.py  api.py  calibration.py
tests/: test_calibration.py
tests/browser/: known-speed.mjs  real-known-speed.mjs  smoke.mjs  static-server.mjs  video-known-speed.mjs
tests/fixtures/vs13/: README.md
tests/web/: homography.test.js  tracker.test.js
