[project]
name = "traffic-review"
version = "0.1.0"
description = "Web app for reviewing speed-camera footage with YOLO-based vehicle speed estimates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=2.0.0",
    "opencv-python-headless>=4.10.0.84",
    "pandas>=2.2.2",
    "python-multipart>=0.0.12",
    "ultralytics>=8.3.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/traffic_review"]

[tool.pytest.ini_options]
testpaths = ["tests"]
